Fixed spacing in mobile header

--- a/styles.css
+++ b/styles.css
@@ -297,6 +297,18 @@ nav ul {
    transform: translateX(0%);
 }
 
+@media screen and (max-width: 568px) {
+   header {
+      padding: 0 20px;
+   }
+
+   nav {
+      width: 100%;
+   }
+}
+
+/**** ANIMATIONS ****/
+
 @keyframes navLinkFade {
    from {
       opacity: 0;
